www/css/mobile.css
:root {
  --text-main-color: #000;
  --text-weak-color: #999;
  --theme-color: rgb(137, 146, 255);
  --blank-color: transparent;
  --bg-main-color: #fff;
  --bg-sub-color: #f6f6f6;
  --overlay-color: rgba(137, 146, 255, 0.25);
  --overlay-color-hide: rgba(137, 146, 255, 0);
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-main-color: #fff;
    --text-weak-color: #999;
    --theme-color: rgb(137, 146, 255);
    --blank-color: transparent;
    --bg-main-color: #111;
    --bg-sub-color: #222;
    --overlay-color: rgba(137, 146, 255, 0.25);
    --overlay-color-hide: rgba(137, 146, 255, 0);
  }
}

html {
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
  padding: 0;
  font-family: system-ui, Meiryo, sans-serif, Arial;
  background: var(--bg-main-color);
}
a {
  text-decoration: none;
  color: var(--text-main-color);
}
.overlay.hidden {
  display: none;
}
.overlay.hide {
  background-color: var(--overlay-color-hide);
}
.overlay {
  display: block;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: var(--overlay-color);
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  z-index: 1;
}
.overlay.hidden .menu {
  display: none;
}
.overlay.hide .menu {
  left: -14rem;
}
.overlay .menu {
  position: absolute;
  width: 14rem;
  height: 100%;
  left: 0;
  top: 0;
  bottom: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  background-color: var(--bg-main-color);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  z-index: 2;
  color: var(--text-main-color);
  box-shadow: 0 0 1rem var(--theme-color);
}
.menu .logo {
  background-image: url(/favicon.png);
  background-size: cover;
  background-position: center bottom;
  background-repeat: no-repeat;
  height: 10rem;
}
.menu .item {
  padding: 0.5rem 0;
  margin: 0 0.5rem;
  line-height: 2rem;
  font-size: 0.9rem;
  border-bottom: 1px dashed var(--theme-color);
  cursor: pointer;
}
.menu .item:last-child {
  border-bottom: none;
}
.menu .defaultPlayer {
  display: flex;
  flex-direction: column;
}
.menu .defaultPlayer select {
  flex-grow: 1;
  border: none;
  outline: 0;
  font-family: system-ui, Meiryo, sans-serif, Arial;
  color: var(--text-main-color);
  background-color: var(--bg-main-color);
  height: 2rem;
  font-size: 0.9rem;
  margin-left: 1.5rem;
}

.list {
  position: fixed;
  top: 3.5rem;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
.list > .error {
  text-align: center;
  height: 100%;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.list > div {
  position: relative;
  cursor: pointer;
  word-break: break-all;
  margin: 0;
  font-size: 0.9rem;
  line-height: 1.7rem;
  padding: 0.7rem 0.4rem;
  color: var(--text-main-color);
}
.list > div:nth-child(odd) {
  background-color: var(--bg-sub-color);
}
.list > div:nth-child(even) {
  background-color: var(--bg-main-color);
}
.file.watched > a {
  color: var(--text-weak-color);
}
.details_title,
.details_modified,
.details_size {
  position: absolute;
  bottom: 0.1rem;
  left: auto;
  right: 0.4rem;
  font-size: 0.8rem;
  line-height: 0.8rem;
  color: var(--text-weak-color);
}
.details_size {
  visibility: hidden;
  left: 0.4rem;
  right: auto;
}
.details_modified {
  color: var(--text-main-color);
}
.icon {
  width: 2.5rem;
  height: 2.5rem;
  margin: 0.5rem;
  cursor: pointer;
  border: 3px double var(--theme-color);
  box-sizing: border-box;
  border-radius: 6px;
}
.search {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
}
.search input {
  padding: 0;
  margin: 0.5rem 0.5rem 0.5rem 0;
  -webkit-appearance: none;
  outline: 0;
  border: none;
  background: transparent;
  border-radius: 0;
  border-bottom: 1px dashed var(--theme-color);
  font-size: 1rem;
  height: 2.5rem;
  flex-grow: 1;
  color: var(--text-main-color);
}
.progress {
  visibility: hidden;
  position: fixed;
  top: 0;
  width: 100%;
  height: 2px;
  background: rgb(137, 146, 255, 0.4);
}
.progress > div {
  position: absolute;
  background: rgb(137, 146, 255);
  height: 2px;
}
.progress > div:first-child {
  animation: increase 2s infinite;
}
.progress > div:last-child {
  animation: decrease 2s 0.5s infinite;
}
@keyframes increase {
  from {
    left: -5%;
    width: 5%;
  }
  to {
    left: 130%;
    width: 100%;
  }
}
@keyframes decrease {
  from {
    left: -80%;
    width: 80%;
  }
  to {
    left: 110%;
    width: 10%;
  }
}

